# django-graphene

./: README.md  build.sh  pyproject.toml  render.yml  requirements.txt
core/: query.py  schema.py  settings.py  urls.py
ingredients/: admin.py  mutation.py  query.py  schema.py  serializers.py
ingredients/migrations/: 0001_initial.py  0002_remove_ingredient_created_at_and_more.py
ingredients/mutations/: category.py  ingredient.py
