[tool.poetry]
name = "django-graphene"
version = "0.1.0"
description = "A django app for testing django-graphene features"
authors = ["Daniel Alejandro Leyva Perez <dalejandrolp99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_graphene"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
graphene-django = "^3.1.3"
django-filter = "^23.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"
django-cors-headers = "^4.2.0"
django-model-utils = "^4.3.1"
django-storages = "^1.13.2"
django-uuidfield = "^0.5.0"
djangorestframework = "^3.14.0"
fastnumbers = "^5.0.1"
graphene-file-upload = "^1.3.0"
graphql-core = "^3.2.3"
graphql-relay = "^3.2.0"
pytz = "^2023.3"
sqlparse = "^0.4.4"
django-utils-six = "^2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
